<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exercice Category"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote3"
                android:textStyle="bold"
                android:textColor="#272727"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/chestcard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#53B1BD"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="CHEST EXERCICE"
                        android:textColor="#000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/chest" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/chest"
                        android:textSize="13sp"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/armcard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#A1C8FB"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="ARMS EXERCICE"
                        android:textColor="#000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/arms" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/arms"
                        android:textSize="13sp"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t2" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/abcard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#53B1BD"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="ABBS EXERCICE"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/abbs" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/abbs"
                        android:textSize="13sp"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t3" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/legcard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#A1C8FB"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="LEGS EXERCICE"
                        android:textColor="#000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/legs2" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/legs"
                        android:textSize="13sp"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t5" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardiocard"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#53B1BD"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="CARDIO"
                        android:textColor="#000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/cardio" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/cardio"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t6" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
<!--
            <include
                layout="@layout/navbar"/>
                -->

    </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <!-- Fixed navigation bar at the bottom -->
    <include
        layout="@layout/navbar"
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
